[workspace]
resolver = "2"
members = [
	"anchored-ref",
	"filen-mobile-native-cache",
	"filen-sdk-rs",
	"filen-types",
	"filen-macros",
	"heif-decoder",
	"test-utils",
	"uniffi-bindgen",
	"uniffi-bindgen-swift",
	"filen-cli",
]

[workspace.package]
version = "0.3.30"

[workspace.metadata.crane]
name = "filen-rs"

[profile.test]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[profile.web-release]
inherits = "release"
opt-level = "s"
